Fix scrollbars yet again for firefox

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,10 @@
   font-family: Ubuntu, Tahoma, sans-serif;
 }
 
+* {
+  scrollbar-width: thin;
+}
+
 body {
   margin: 0;
   background-color: var(--background);
@@ -34,8 +38,6 @@ body {
   max-width: 1000px;
   min-height: calc(100vh - 80px);
   padding: 16px 0;
-  border-left: 1px solid gray;
-  border-right: 1px solid gray;
 }
 
 .button {
